# Talouden-seuranta-sovellus

./: .coverage  .coveragerc  .env  .env.test  .gitignore  README.md  database.db  pyproject.toml  pytest.ini  tasks.py  users.db
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: .gitignore
laskarit/laskarit/viikko1/: komentorivi.txt
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: testi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/: .coverage  index.py  maksukortti.py
laskarit/viikko2/maksukortti/src/tests_laskari/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/: .coverage
laskarit/viikko2/unicafe/src/htmlcov/: d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_kassapaate_test_py.html  d_a44f0ac069e85531_maksukortti_test_py.html  index.html  kassapaate_py.html  maksukortti_py.html  status.json
src/: .coverage  GUI.py  Log_in_GUI.py  config.py  log_in.py  main.py  person.py  pyproject.toml  users.db
src/data/: database.db  test-database.db  test-users.db  users.db
src/database_services/: database.py  user_database.py
src/services/: log_in.py
src/tests/: log_in_test.py  test_confirm_window.py
src/tests/test_services/: test_log_in.py
src/tests/test_ui/: test_confirm_window.py  test_database.py  test_gui.py  test_statistics.py  test_table.py  test_tkinter.py
src/ui/: confirm_window.py  gui.py  log_in_gui.py  statistics.py  table.py
(+2 files in other folders)
